Fix tests compilation #91